plogapp/tests/errors/syntax_missingDot.plog
sorts

#boolean = {true, false}.

attributes
p: #boolean.
q: #boolean


statements

p.
?q.
